bin/testsuite/tests/compiler/src/errors/compiler3738.swg
#global testerror "Saf0029"

//#[Swag.PrintBc, Swag.Optimize(.All, false)]
#[Swag.Safety(.All, .All, true)]
#test
{
    let x = 1

    #[Swag.Complete]
    switch x
    {
    case 0:
        @print("0")
    }
}
